feat(generator): support group definition for nested properties, support binding name override